--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,14 @@ h1{
     color: aqua;    
 
 }
-#tourDates-div{
+#tourDates{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     color: blueviolet;
+
+}
+
+#bandsInfo{
+font-family: Arial, Helvetica, sans-serif;
 
 }
