--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,20 @@ img{
 
 }
 #tourDatesInfo-Area{
-  margin-left: 900px;
+  background-color: white;
+  position: relative;
+  top: -110px;
+  margin-left: 450px;
   margin-bottom: 30px;
   font-family: 'Courier New', Courier, monospace;
   
+}
+
+#similarArtist {
+  background-color: white;
+  float: right;
+  widows: 30%;
+  position: relative;
+  top: -300px;
+  left: -200px;
 }
