--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,12 @@ body {
 
 .tourInfo{
   font-family: 'Roboto Slab', serif;
-  font-size: 10px;
-  color: aqua;
+  font-size: 15px;
+  color: white;
   background-color: rgba(221, 157, 229, 0.719);
-
+  margin: 20px 0px 20px 0px;
+  width: 100px;
+  margin-top: 50px;
 }
 
 
@@ -39,16 +41,17 @@ body {
 
 
 img{
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
+  margin-top: 16px;
+  margin-left: 15px;
 
 }
 
 #bandsInfo-Area{
-  margin-top: -400px;
-  margin-left: 430px;
-  width: 210px;
-  height: 100px;
+ 
+  width: 330px;
+  height: 110px;
   font-family: 'Courier New', Courier, monospace;
   background-color: rgba(221, 157, 229, 0.719);
 
@@ -56,18 +59,20 @@ img{
 #tourDatesInfo-Area{
   background-color: rgba(221, 157, 229, 0.719);
   position: relative;
-  top: -110px;
-  margin-left: 450px;
+  margin-left: 350px;
   margin-bottom: 30px;
+  margin-top: -452px;
   font-family: 'Courier New', Courier, monospace;
   
 }
 
 #similarArtist {
   background-color: rgba(221, 157, 229, 0.719);
-  float: right;
-  widows: 30%;
+  width:  174px;
+  font-family: 'Roboto Slab', serif;
   position: relative;
-  top: -300px;
-  left: -200px;
+  top: -466px;
+  left: 147px;
+  font-size: 12px;;
+  color: white;
 }
